convert rem to px

--- a/src/assets/css/layout.css
+++ b/src/assets/css/layout.css
@@ -3,26 +3,26 @@
     padding: 0;
 }
 .pt-32{
-    padding-top: 2rem;
+    padding-top: 32px;
 }
 .pr-60 {
-    padding-right: 3.75rem;
+    padding-right: 60px;
 }
 /* Margin */
 .m0 {
     margin: 0;
 }
 
-.mr-60 {
-    margin-right: 3.75rem;
+.mr-50 {
+    margin-right: 50px;
 }
 
 .mt-10 {
-    margin-top: 0.625rem;
+    margin-top: 10px;
 }
 
 .mt-14 {
-    margin-top: 0.875rem;
+    margin-top: 14px;
 }
 
 .mainContainer {
@@ -43,9 +43,9 @@
 }
 
 .gap-40 {
-    gap: 2.5rem;
+    gap: 33px;
 }
 
 .gap-20 {
-    gap: 1.25rem;
+    gap: 20px;
 }
