--- a/src/assets/css/index.css
+++ b/src/assets/css/index.css
@@ -2,9 +2,10 @@ body{
     margin: 0;
     padding: 0;
     font-family: 'Kanit';
+    background-color: black;
 }
 .header{
-    height: 6.25rem;
+    height: 100px;
 }
 
 .header div div a{
@@ -25,7 +26,7 @@ body{
 }
 
 .logo {
-    width: 170px;
+    width: 180px;
     height: 3.5rem;
 }
 
@@ -46,4 +47,27 @@ body{
     width: 100%;
     margin: 0;
     padding: 0;
+}
+
+.home-content {
+    padding-top: 84px;
+    text-align: center;
+    color: white;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 96px;
+    line-height: 120%;
+}
+
+.home-characters {
+    padding-top: 100px;
+}
+
+.mint {
+    height: 1120px;
+    width: 100%;
+}
+
+.mint-footer div {
+    width: 355px;
 }
