--- a/src/assets/css/color.css
+++ b/src/assets/css/color.css
@@ -11,6 +11,10 @@
     color: gray;
 }
 
+.text-gray-100 {
+    color: #F8F1F1;
+}
+
 .text-red {
     color: red;
 }
@@ -21,6 +25,10 @@
 
 .text-yellow-dark {
     color: #D57A00;
+}
+
+.text-blue-dark {
+    color: #18465F;
 }
 
 /* Background Color */
@@ -46,4 +54,8 @@
 
 .bg-yellow-dark {
     background-color: #D57A00;
+}
+
+.bg-blue-dark {
+    background-color: #18465F;
 }
