--- a/src/assets/css/layout.css
+++ b/src/assets/css/layout.css
@@ -20,8 +20,17 @@
 .pt-60 {
     padding-top: 60px;
 }
+.pt-50 {
+    padding-top: 50px;
+}
+.pb-50 {
+    padding-bottom: 50px;
+}
 .pt-100 {
     padding-top: 100px;
+}
+.pt-150 {
+    padding-top: 150px;
 }
 /* Margin */
 .m0 {
@@ -36,12 +45,29 @@
     margin-top: 10px;
 }
 
+.mt-100 {
+    margin-top: 100px;
+}
+
+.mt-50 {
+    margin-top: 50px;
+}
+
+.mb-50 {
+    margin-bottom: 50px;
+}
+
 .mt-14 {
     margin-top: 14px;
 }
 
 .mainContainer {
     width: 1200px;
+    margin: 0 auto;
+}
+
+.mainContainer-roadmap {
+    width: 1076px;
     margin: 0 auto;
 }
 
@@ -76,4 +102,22 @@
 
 .gap-16 {
     gap: 16px;
+}
+
+/* Width */
+.w-446 {
+    width: 446px;
+}
+
+/* Height */
+.h-446 {
+    height: 446px;
+}
+
+.h-71 {
+    height: 71px;
+}
+
+.h-100 {
+    height: 100px;
 }
